fix/ footer spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset and Fonts */
+/* Reset and Font */
 
 html,
 body {
@@ -12,7 +12,7 @@ body {
 Navbar
 ================= */
 
-.site-title img {
+.site-logo img {
     width: 18em;
 }
 
@@ -52,12 +52,12 @@ nav a:hover,
 nav a:focus,
 .columns a:hover,
 .columns a:focus {
-    color: #553E16;
+    color: #555316;
 }
 
 nav a:hover,
 nav a:focus{
-    border-bottom: 1px solid #553E16;
+    border-bottom: 1px solid #555316;
 }
 
 /* =================
@@ -157,22 +157,20 @@ Section two, three, four, five
 }
 
 .sections img{
-    width: 35em;
+    width: 50%;
 }
 
 .section-content{
-    width: 40%;
+    width: 41%;
     text-align: center;
     line-height: 1.8rem;
-    margin: 2em 0;
 }
 
 .section-content h2{
-    color: #553E16;
+    color: #555316;
     font-size: 1.6rem;    
     margin-bottom: 1.3em;
-    /* padding-bottom: 0.1em; */
-    border-bottom: 1.5px solid #553E16;
+    border-bottom: 1.5px solid #555316;
     font-weight: 600;
 }
 
@@ -204,36 +202,51 @@ footer{
     margin: 0;
 }
 
+form{
+    margin: 2em 0;
+}
+
 form input[type='email']{
     width: 25%;
     height: 2em;
-    margin: 2em;
     outline: none;
     border: none;
     border-radius: 7px;
 }
 
 form input[type='email']:focus {
-    border: 3px solid #553E16;
+    border: 3px solid #555316;
 }
 
 form button {
-    padding: 0.3em 0.7em;
-    background: whitesmoke;
-    border: none;
+    color: whitesmoke;
+    padding: 0.5em 0.9em;
+    background: #555316;
+    outline: none;
+    border: 1px solid #555316;
     cursor: pointer;
+}
+
+form button:hover{
+    color: #162D54;
+    background: whitesmoke;
 }
 
 .columns{
     display: flex;
     justify-content: space-evenly;
-    border-top: 1.5px solid #553E16;
+    border-top: 1.5px solid #555316;
 }
 
 .col-one,
 .col-two{
     display: flex;
     flex-direction: column;
+}
+
+.col-one h2,
+.col-two h2{
+    margin-bottom: 0.8em;
 }
 
 .footer-icons{
